assets/styles/style.css
body {
  font-family: "Roboto", sans-serif;
}

.body-container {
  max-width: 1310px;
}

.navbar-brand img {
  width: 132px;
}

.subscription-btn {
  font-size: 12px;
  line-height: 1.3;
}

.user-icon {
  opacity: 0.75;
}

.top-navbar {
  top: -10px;
  width: 90%;
  border-radius: 0 20px 0 0;
}

.search-icon {
  right: -10px;
}

.bottom-navbar .nav-link {
  letter-spacing: -0.5px;
}

.category {
  background-color: rgba(255, 255, 255, 0.9);
  bottom: 0;
  left: 0;
}

.paragraph {
  font-size: 13px;
  line-height: 1.4;
}

.debate-image {
  width: 63px;
  height: 63px;
}

.byline {
  font-size: 14px;
}

.debate-wrap {
  border-top: 4px solid #d9d9d9;
  border-bottom: 4px solid #d9d9d9;
}

.deco {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.c-vs {
  width: 32px;
  height: 32px;
  font-size: 14px;
  z-index: 2;
  left: 50%;
  transform: translateX(-50%);
}

.deco::before,
.deco::after {
  content: "";
  display: block;
  width: 100%;
  background-color: #d9d9d9;
  height: 1px;
  position: absolute;
  left: 0;
  right: 0;
  z-index: 0;
}

.deco::before {
  top: 15px;
}

.deco::after {
  top: 17px;
}

.small-img {
  height: 120px;
  object-fit: cover;
}

.more-stories .stories-img-wrapper {
  flex: 0 0 95px;
}

.article-3 .stories-img-wrapper {
  flex: 0 0 110px;
}

.stories-img {
  height: 95px;
  object-fit: cover;
}

.signup-card {
  max-width: 300px;
}

.signup-card .icon-n {
  font-size: 80px;
}

.cover-img-wrapper {
  min-height: 230px;
}

.cover-img:first-child {
  left: 30%;
}

.cover-img:nth-child(2) {
  left: 43%;
  top: 20px;
}

.newsletter-container .left {
  background-image: url("https://d.newsweek.com/en/full/1541302/starting5-homepage.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  height: 170px;
}

.email-input {
  height: unset;
}

@media (min-width: 481px) {
  .article-3 .stories-img-wrapper {
    flex: 0 0 258px;
  }
}

@media (min-width: 768px) {
  .subscription-btn {
    font-size: 15px;
  }

  .paragraph {
    font-size: 15px;
  }

  .magazine-image {
    height: 160px;
    object-fit: cover;
  }

  .magazine-category-text {
    font-size: 13px;
  }

  .magazine-title {
    font-size: 19px;
  }

  .cover-img:first-child {
    left: 0;
  }

  .cover-img:nth-child(2) {
    left: 60px;
  }

  .newsletter-container .left {
    height: unset;
  }

  .footer-links * {
    font-size: 14px;
  }

  .footer-links li {
    border-right: 1px solid #d9d9d9;
  }

  .article-3 .stories-img-wrapper {
    flex: 0 0 95px;
  }

  #articles-2 {
    max-width: 330px;
  }

  #editors-pick img {
    height: 236px;
    object-fit: cover;
  }
}

/* Large (lg) devices (desktops, 992px and up) */
@media (min-width: 992px) {
  .navbar-brand img {
    width: 396px;
  }

  .magazine-image {
    height: 210px;
  }

  #editors-pick img {
    height: 140px;
  }
}

/* Extra (xl) large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
  .magazine-image {
    height: 262px;
  }

  #editors-pick img {
    height: 175px;
  }
}

